# amr_mini_description

./: README.md  package.xml  requirements.py  requirements.txt  setup.cfg  setup.py
AmrMini_models/Amr_mini/meshes/: lidar.stl  motor.stl
amr_mini_description/: goalPose.py  initialpose.py  publisher_member_function.py  received_global_plan.py  subscriber_member_function.py
config/: amcl.yaml  ekf.yaml  map_server.yaml  mapper_params_online_async.yaml  nav2_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/amr_mini_description/lib/amr_mini_description/: goalPose_pub  initialpose_pub  requirements_txt
launch/: amcl.launch.py  amr_mini.launch.py  gazebo.launch.py  goalPose.launch.py  initialpose.launch.py  map_server.launch.py  mapping.launch.py  merge_2_scan.py  merge_lidar.launch.py  navigation.launch.py  rs_launch.launch.py  rviz.launch.py  twist_mux.launch.py
log/: latest_build
maps/: map_serial.data  my_map_save.pgm  my_map_save.yaml  my_map_serial.data  my_map_serialize.data
meshes/: sase.stl
models/amr_mini/: model.config  model.sdf  model2.sdf
models/new_walls/: model.config
models/world_folder/: model.config
rviz/: amr_mini.rviz
urdf/: amr.urdf  amr_mini.xacro  amr_mini_xacro.urdf
urdf/urdf_include/: base_link.xacro  camera.xacro  caster_wheel.xacro  caster_wheel_link.xacro  common_properties.urdf.xacro  gazebo.xacro  imu.xacro  intel_d435.urdf.xacro  lidar.xacro  motor.xacro  wheel.xacro
worlds/: my_world.model  myworld.model  walls.model
(+30 files in other folders)
