<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_mini_description</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mkutan@todo.todo">mkutan</maintainer>
  <license>Apache License 2.0</license>


  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>smac_planner</exec_depend>
  <exec_depend>lifecycle</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
   
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
